Added day4 part1

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/target/debug/aoc",
+            "program": "${workspaceFolder}/2021/day4/target/debug/day4",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/2021/day4/",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
